# qpfnn

./: .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Project.ede  README.md  TAGS  common.cmake  version.h
filehdl/: CMakeLists.txt  alert.h  genfhdl.h  jsonfhdl.cpp  jsonfhdl.h  qdtrephdl.cpp  qdtrephdl.h
fmk/: CMakeLists.txt  channels.h  cntrmng.cpp  cntrmng.h  component.cpp  component.h  config.cpp  config.h  datamng.cpp  datamng.h  datatypes.cpp  datatypes.h  dbhdl.h  dbhdlpostgre.cpp  dbhdlpostgre.h  dckmng.cpp  dckmng.h  euclid.h  evtmng.cpp  evtmng.h  except.h  filenamespec.cpp  filenamespec.h  fitsmetadatareader.cpp  fitsmetadatareader.h  fmk  hostinfo.cpp  hostinfo.h  httpserver.cpp  httpserver.h  logmng.cpp  logmng.h  message.h  metadatareader.h  procinfo.cpp  procinfo.h  srvmng.cpp  srvmng.h  sync.h  tskage.cpp  (+7 more)
infix/: CMakeLists.txt  infix.pro  infixeval.h  infixeval.tcc
json/: CMakeLists.txt  json.pro  jsoncpp.cpp
log/: CMakeLists.txt  log.cpp  log.h
mongoose/: CMakeLists.txt  MongooseConfig.cmake.in
nncomm/: CMakeLists.txt  bus.cpp  bus.h  commnode.cpp  commnode.h  dbg.cpp  dbg.h  err.cpp  err.h  nn.hpp  nncomm.h  nncommon.h  pair.cpp  pair.h  pipeline.cpp  pipeline.h  protlayer.cpp  protlayer.h  pubsub.cpp  pubsub.h  reqrep.cpp  reqrep.h  scalprotrole.cpp  scalprotrole.h  survey.cpp  survey.h
qpf/: CMakeLists.txt  deployer.cpp  deployer.h  main.cpp
qpfhmi/: CMakeLists.txt  browser.cpp  browser.h  browserwidget.ui  configtool.cpp  configtool.h  configtool.qrc  configtool.ui  connectionwidget.cpp  connectionwidget.h  dbbrowser.cpp  dbbrowser.h  dbbrowser.ui  dbmng.cpp  dbmng.h  dbtblmodel.cpp  dbtblmodel.h  dbtreemodel.cpp  dbtreemodel.h  dlgalert.cpp  dlgalert.h  dlgalert.ui  dlgdataing.cpp  dlgdataing.h  dlgdataing.ui  dlgshowtaskinfo.cpp  dlgshowtaskinfo.h  dlgshowtaskinfo.ui  exttooledit.cpp  exttooledit.h  exttooledit.ui  exttoolsdef.cpp  exttoolsdef.h  exttoolsdef.ui  filters.h  frm_filter.cpp  frm_filter.h  frm_filter.ui  frm_filterset.cpp  frm_filterset.h  (+62 more)
run/: .tramp_history  QPF-workarea.tgz  QPFHMI.conf  file.cfg  filenamespec.tpl  qpf-eucdcks.cfg  qpf-vm2-dummyproc.cfg  qpf-vm2.cfg  qpf-vm3-dummyproc.cfg  qpf-vmqpfdev-172.16.225.x.cfg  qpf-vmqpfdev.cfg  qpf-vmqpfdev.vb.cfg  qpfdb.sql  runContainer.py  sample-service-call.txt
run/dcksrwm/: docker_swarm_mng.cpp  httpClient.py  httpClient2.py  httpServer.py  jctest.cpp
run/dockerfiles/: CreateDockerImgs.sh  Makefile
run/dockerfiles/LE1sim/: Dockerfile  Dockerfile-base  Makefile  le1sim.tgz
run/dockerfiles/QLA/: Dockerfile  Makefile
run/dockerfiles/QLAsrv/: .tramp_history  Dockerfile  Dockerfile-base  Makefile
run/old/: .tramp_history  LE1_VIS_MetadataCollector  QLA_VIS
run/qpf/cfg/: filenamespec.tpl  qpf-test-lodeen12.json  tpl.cfg.json
run/qpf/scripts/: Dockerfile-VV-20150907  clean-up-qpfdb.sql  display-docker-ps  showProcNodeLogs.sh
sample/: CMakeLists.txt
sample/dcksrwm/: CMakeLists.txt
sample/dwe/: CMakeLists.txt  main.cpp
sample/filenamespec/: CMakeLists.txt  main.cpp  testfs.nom  testfs.sh
sample/fits/: CMakeLists.txt
sample/hmi/: CMakeLists.txt  hmipxy.cpp  hmipxy.h
sample/hostinfo/: CMakeLists.txt
sample/json/: CMakeLists.txt
sample/nncomm/: main.cpp
sample/procfmkinfo/: CMakeLists.txt  main.cpp
sample/simple/: CMakeLists.txt  main.cpp
scripts/: .tramp_history  BuildQPF.sh  ClearForQPF.sh  CreateDockerContainer.sh  GenerateRelease.sh  InstallCOTS.sh  RunQPF.sh  clear_qpf_data.sh  docker_start.sh  pgsql_initdb.sh  pgsql_start_server.sh  ssh-connect.sh
str/: CMakeLists.txt  str.cpp  str.h
tests/: CMakeLists.txt  CMakeLists.txt.gtest  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  main.cpp  testjson.cpp
tests/fits/: main.cpp
tests/hmi/: hmipxy.cpp  hmipxy.h  main.cpp
tests/hostinfo/: main.cpp
tests/http/: CMakeLists.txt  main.cpp
tests/infix/: test_infixeval.cpp  test_infixeval.h
tests/json/: main.cpp
tests/nncomm/: CMakeLists.txt  survey.cpp
tests/timer/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  PCRegEx.h  alert.cpp  alert.h  dwatcher.cpp  dwatcher.h  metadatareader.h  propdef.h  sm.cpp  sm.h  timer.cpp  timer.h  tools.cpp  tools.h
uuid/: CMakeLists.txt  uuid.cpp  uuid.h  uuidxx.cpp  uuidxx.h
