#======================================================================
# CMakeLists.txt
# QPF - Prototype of QLA Processing Framework
# General Project File
#======================================================================
# Author: J C Gonzalez - 2015-2017
# Copyright (C) 2015-2017 Euclid SOC Team at ESAC
#======================================================================

add_subdirectory(simple)
add_subdirectory(nncomm)
add_subdirectory(json)
add_subdirectory(dwe)
add_subdirectory(hmi)
add_subdirectory(fits)
add_subdirectory(hostinfo)
add_subdirectory(filenamespec)
add_subdirectory(procfmkinfo)
add_subdirectory(http)
add_subdirectory(timer)
