#======================================================================
# CMakeLists.txt
# QPF - Prototype of QLA Processing Framework
# General Project File
#======================================================================
# Author: J C Gonzalez - 2015-2017
# Copyright (C) 2015-2017 Euclid SOC Team at ESAC
#======================================================================

add_subdirectory(simple)
add_subdirectory(json)
add_subdirectory(hmi)
add_subdirectory(fits)
add_subdirectory(hostinfo)
